<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pink Dot</string>
    <string name="action_settings">Settings</string>
    <string name="add_dot">Добавление точки</string>
    <string name="button_add">Добавить</string>
    <string name="hint_dot_name">Название точки</string>
    <string name="hint_address">Адрес</string>
    <string name="textDotsOnMap">Точки на карте</string>
    <string name="btn_back">Назад</string>
    <string name="btn_delete_dot">Удалить точку</string>
    <string name="text_delete_dot">Delete</string>

    <item name="toast_wrong_name" type="id">Попробуйте ввести другое название точки</item>
    <item name="toast_no_one_object_found" type="id">По вашему запросу ничего не найдено. Попробуйте уточнить запрос. </item>
    <item name="start_adv_search" type="id">Запущен расширенный поиск...</item>
    <item name="toast_offline" type="id">Подключение к интернету отсутствует</item>

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
