<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >





    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dot"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDotName"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:inputType="text"
        android:hint="@string/hint_dot_name"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDotAddress"
        android:layout_below="@+id/editDotName"
        android:layout_alignRight="@+id/editDotName"
        android:layout_alignLeft="@+id/editDotName"
        android:inputType="text"
        android:hint="@string/hint_address"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:id="@+id/buttonAdd"
        android:layout_below="@+id/editDotAddress"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/black_line_1"
        android:src="@drawable/black_line"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_marginBottom="10dp"></ImageView>

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/black_line_1">-->

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridForDots"
        android:layout_alignParentRight="true"
        tools:ignore="ScrollViewSize"
        android:layout_below="@+id/black_line_1"
        android:layout_above="@+id/imageView"
        android:layout_marginBottom="10dp"/>
    <!-- </ScrollView>-->


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageDotsMap"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/scrollView"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/imageView"
        android:src="@drawable/black_line"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/gridForDots"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textDotsOnMap"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>
